--- a/client/package.json
+++ b/client/package.json
@@ -34,5 +34,10 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": {
+    "/": {
+      "target": "http://localhost:5000",
+      "secure": false
+    }
+  }
 }
