--- a/client/package.json
+++ b/client/package.json
@@ -34,10 +34,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": {
-    "/": {
-      "target": "http://localhost:5000",
-      "secure": false
-    }
-  }
+  "proxy": "http://127.0.0.1:5000/",
+  "secure": "false"
 }
