--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "mongoose": "^5.9.25",
+    "multer": "^1.4.2",
     "uuidv4": "^6.2.0"
   },
   "devDependencies": {
