--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.27.0",
     "mongoose": "^5.9.25",
     "multer": "^1.4.2",
+    "passport-facebook": "^3.0.0",
     "uuidv4": "^6.2.0"
   },
   "devDependencies": {
