--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
-    "dev": "concurrently \"node server\" \"npm run client\""
+    "dev": "concurrently \"node server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
-  "author": "",
+  "author": "Azhar Moosa",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
